# openipcam-n745-2.4

./: README.md
BSP/Compiler Tools/arm_tools/arm-elf/inc/bluetooth/: Makefile  Makefile.am  Makefile.in  bluetooth.h  bnep.h  cmtp.h  hci.h  hci_lib.h  hci_uart.h  hci_vhci.h  hidp.h  l2cap.h  rfcomm.h  sco.h  sdp.h  sdp_lib.h
BSP/romdisk/dev/: dsp  mixer
BSP/romdisk/etc/: fccc.scr  hosts  mppp.cfg  options  passwd  protocols  resolv.conf
BSP/ucLinux24BSP/: camera  camera.unz  gunzip_bflt.pl  image
BSP/ucLinux24BSP/TestApps/: README
BSP/ucLinux24BSP/__MACOSX/: ._camera
BSP/ucLinux24BSP/uClinux-dist/: .config  .oldconfig  MAINTAINERS  Makefile  README  SOURCE  autoconf.h  config.arch  config.in  version
Original Firmware/: linux.img  myromfs.img  romfs  romfs.img  romfs_2.4_from_camera.img
bootloader/: init.axf  updater_mac.axf  updater_usb.axf
bootloader/bootloader/BuildAll/: BuildAll.mcp
bootloader/bootloader/Embedded/: Embedded.mcp  heap.s  main.c  retarget.c  scat_b.scf  serial.c  stack.s  vectors.s
bootloader/bootloader/FLASH_FU/: FLASH_FU.c  FLASH_FU.mcp
bootloader/bootloader/TFTPserv/: makefile
bootloader/bootloader/WBLv1_1/: README.TXT  RELNOTES.TXT  bootloader.mcp  flash.mcp  init.mcp
bootloader/bootloader/WBRv1_1/: bootrom.mcp
bootloader/bootloader/Xmodem/: Xmodem.mcp  main.c  makefile  xmodem.c
bootloader/bootloader/autoloader/: autoloader.c  autoloader.mcp  scat_b.scf
bootloader/bootloader/shell/: W90p710_reg.h  bfunc.c  bfunc.h  bib.c  bootproc.c  except_h.s  (+10 more)
romfs_bin_files/: camera  gpio  inetd  init  ping  testusi  uarttest
(+6514 files in other folders)
